fix: update cloud secrets path and vmdata volume

--- a/cloud/.env.example
+++ b/cloud/.env.example
@@ -14,6 +14,10 @@ GHCR_OWNER=YOUR_GITHUB_USERNAME
 # For continuous deploy, set to a pushed tag like: sha-<gitsha> or main
 CLOUD_TAG=main
 
+# Existing VictoriaMetrics data volume name.
+# Must already exist when using external volumes (see compose files).
+CLOUD_VM_VOLUME_NAME=vmdata
+
 # Required: pin 3rd party images (avoid :latest)
 #
 # Recommended: pin by digest from a known-good server:
@@ -37,7 +41,7 @@ SANDBOX_BIND=127.0.0.1
 BASE_DOMAIN=example.com
 ACME_EMAIL=admin@example.com
 
-# Grafana admin user (password is read from /etc/overdrive/secrets/grafana_admin_password)
+# Grafana admin user (password is read from /etc/ovr/secrets/grafana_admin_password)
 GRAFANA_ADMIN_USER=admin
 
 # VictoriaMetrics write auth (used by Caddy basic_auth)
@@ -45,8 +49,8 @@ VM_WRITE_USER=ovr
 # Generate with: docker compose run --rm caddy caddy hash-password --plaintext 'your_password'
 VM_WRITE_PASS_HASH=$2a$14$replace_with_hash
 
-# Optional: load the hash from a file on the server
-VM_WRITE_PASS_HASH_FILE=
+# Optional: load the bcrypt hash from a file on the server
+VM_WRITE_PASS_HASH_FILE=/etc/ovr/secrets/vm_write_password_hash
 
 # Optional retention override
 VM_RETENTION=365d
