--- a/cloud/compose.release.yml
+++ b/cloud/compose.release.yml
@@ -25,7 +25,7 @@ services:
       - victoria-metrics
     environment:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER:-admin}
-      - GF_SECURITY_ADMIN_PASSWORD__FILE=/etc/overdrive/secrets/grafana_admin_password
+      - GF_SECURITY_ADMIN_PASSWORD__FILE=/etc/ovr/secrets/grafana_admin_password
       - GF_SERVER_DOMAIN=grafana.${BASE_DOMAIN}
       - GF_SERVER_ROOT_URL=https://grafana.${BASE_DOMAIN}/
       - GF_USERS_ALLOW_SIGN_UP=false
@@ -70,7 +70,7 @@ services:
     volumes:
       - fleet_data:/data
       - fleet_reports:/data/reports
-      - /etc/overdrive/secrets:/etc/overdrive/secrets:ro
+      - /etc/ovr/secrets:/etc/ovr/secrets:ro
     restart: unless-stopped
 
   map:
@@ -91,7 +91,7 @@ services:
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile:ro
       - ./caddy-entrypoint.sh:/entrypoint.sh:ro
-      - /etc/overdrive/secrets:/etc/overdrive/secrets:ro
+      - /etc/ovr/secrets:/etc/ovr/secrets:ro
       - caddy_data:/data
       - caddy_config:/config
     environment:
@@ -104,6 +104,8 @@ services:
 
 volumes:
   vmdata:
+    external: true
+    name: ${CLOUD_VM_VOLUME_NAME:-vmdata}
   grafana:
   caddy_data:
   caddy_config:
