--- a/provisioning/edge/preseed.cfg
+++ b/provisioning/edge/preseed.cfg
@@ -118,15 +118,22 @@ d-i preseed/late_command string \
     in-target chmod 700 /home/ovr/.ssh; \
     in-target chmod 600 /home/ovr/.ssh/authorized_keys; \
   fi; \
-  if [ -d /cdrom/overdrive ]; then \
-    mkdir -p /target/etc/overdrive; \
-    cp -a /cdrom/overdrive/. /target/etc/overdrive/; \
-    if [ -d /target/etc/overdrive/secrets ]; then \
-      chmod 700 /target/etc/overdrive/secrets; \
-      chmod 600 /target/etc/overdrive/secrets/* 2>/dev/null || true; \
+  if [ -d /cdrom/ovr ]; then \
+    OVR_SEED_DIR=/cdrom/ovr; \
+  elif [ -d /cdrom/overdrive ]; then \
+    OVR_SEED_DIR=/cdrom/overdrive; \
+  else \
+    OVR_SEED_DIR=""; \
+  fi; \
+  if [ -n "$OVR_SEED_DIR" ]; then \
+    mkdir -p /target/etc/ovr; \
+    cp -a "$OVR_SEED_DIR"/. /target/etc/ovr/; \
+    if [ -d /target/etc/ovr/secrets ]; then \
+      chmod 700 /target/etc/ovr/secrets; \
+      chmod 600 /target/etc/ovr/secrets/* 2>/dev/null || true; \
     fi; \
-    if [ -f /target/etc/overdrive/site.env ]; then \
-      chmod 600 /target/etc/overdrive/site.env; \
+    if [ -f /target/etc/ovr/site.env ]; then \
+      chmod 600 /target/etc/ovr/site.env; \
     fi; \
   fi; \
   if [ -d /cdrom/OVR_Telemetry_Stack ]; then \
