--- a/provisioning/edge/firstboot.env.example
+++ b/provisioning/edge/firstboot.env.example
@@ -1,9 +1,9 @@
-# Example configuration for ovr-firstboot (copy to /etc/overdrive/firstboot.env or similar)
-# NOTE: Do not commit real secrets to git. Use *_FILE paths that point to /etc/overdrive/secrets/*.
+# Example configuration for ovr-firstboot (copy to /etc/ovr/firstboot.env or similar)
+# NOTE: Do not commit real secrets to git. Use *_FILE paths that point to /etc/ovr/secrets/*.
 
 LAN_MODE=dhcp
 # WIFI_SSID="Your SSID"
-# WIFI_PASS_FILE=/etc/overdrive/secrets/wifi_password
+# WIFI_PASS_FILE=/etc/ovr/secrets/wifi_password
 
 # Expose only what you need
 ALLOWED_TCP_PORTS=22,3000,8428,8429,9100,8080,8088
@@ -16,8 +16,8 @@ IP_PROBE_HOST=1.1.1.1
 IP_PROBE_PORT=443
 
 # Stack integration
-EVENT_API_KEY_FILE=/etc/overdrive/secrets/event_api_key
-GX_PASSWORD_FILE=/etc/overdrive/secrets/gx_password
+EVENT_API_KEY_FILE=/etc/ovr/secrets/event_api_key
+GX_PASSWORD_FILE=/etc/ovr/secrets/gx_password
 
 # Local VictoriaMetrics endpoints
 VM_WRITE_URL=http://victoria-metrics:8428/write
@@ -26,4 +26,4 @@ VM_QUERY_URL=http://victoria-metrics:8428
 # Optional: secondary cloud write endpoint
 # VM_WRITE_URL_SECONDARY=https://metrics.example.com/write
 VM_WRITE_USERNAME=ovr
-VM_WRITE_PASSWORD_FILE=/etc/overdrive/secrets/vm_write_password
+VM_WRITE_PASSWORD_FILE=/etc/ovr/secrets/vm_write_password
