fix(edge): restore downsampled remote_write pipeline (:10s_avg)
Syncs stream aggregation + relabel gates with runtime config, keeps cloud storage small, and preserves raw local metrics.

--- a/edge/vmagent/remote_write_cloud_relabel.yml
+++ b/edge/vmagent/remote_write_cloud_relabel.yml
@@ -1,3 +1,4 @@
-- action: drop
-  source_labels: [instance]
-  regex: ".+:9100"
+# Keep only downsampled series + (optionally) a few raw “state” metrics.
+- action: keep
+  source_labels: [__name__]
+  regex: 'ovr_event_active|.*:10s_avg$'
