fix: fleet map regressions and event registry (refs #5)

--- a/cloud/.env.example
+++ b/cloud/.env.example
@@ -52,8 +52,9 @@ VM_WRITE_PASS_HASH_FILE=
 VM_RETENTION=365d
 
 # Fleet map config (optional)
-# Use :avg if you're stream-aggregating; set blank to use raw metrics.
-FLEET_METRIC_SUFFIX=:avg
+# Use :10s_avg if you're stream-aggregating; set blank to use raw metrics.
+FLEET_METRIC_SUFFIX=:10s_avg
+FLEET_VM_WRITE_URL=http://victoria-metrics:8428/write
 FLEET_DEPLOYMENT_ID=
 FLEET_LOOKBACK_SECONDS=3600
 FLEET_GPS_STALE_SECONDS=1800
