fix: normalize folder layout

--- a/cloud/.env.example
+++ b/cloud/.env.example
@@ -1,4 +1,5 @@
 # Cloud environment variables
+# Canonical location: /etc/ovr/cloud.env (cloud/.env should symlink here)
 #
 # This file is consumed by:
 # - cloud/compose.release.yml (production)
@@ -37,7 +38,7 @@ SANDBOX_BIND=127.0.0.1
 BASE_DOMAIN=example.com
 ACME_EMAIL=admin@example.com
 
-# Grafana admin user (password is read from /etc/overdrive/secrets/grafana_admin_password)
+# Grafana admin user (password is read from /etc/ovr/secrets/grafana_admin_password)
 GRAFANA_ADMIN_USER=admin
 
 # VictoriaMetrics write auth (used by Caddy basic_auth)
