--- a/cloud/compose.sandbox.yml
+++ b/cloud/compose.sandbox.yml
@@ -10,11 +10,12 @@
 # - VictoriaMetrics remote-write (basic_auth): 18428 -> caddy
 # - Grafana (direct): 13001 -> grafana
 #
-# By default, ports bind to 127.0.0.1 (safe). To expose publicly, set SANDBOX_BIND=0.0.0.0 in cloud/.env.
+# By default, ports bind to 127.0.0.1 (safe). To expose publicly, set SANDBOX_BIND=0.0.0.0 in cloud/.env
+# (cloud/.env should be a symlink to /etc/ovr/cloud.env).
 
 services:
   victoria-metrics:
-    image: ${VM_IMAGE:?Set VM_IMAGE in cloud/.env (pin by tag or digest; no latest tag)}
+    image: ${VM_IMAGE:?Set VM_IMAGE in .env (symlink to /etc/ovr/cloud.env; pin by tag or digest; no latest tag)}
     command:
       - "-storageDataPath=/storage"
       - "-retentionPeriod=${VM_RETENTION:-365d}"
@@ -24,12 +25,12 @@ services:
     restart: unless-stopped
 
   grafana:
-    image: ${GRAFANA_IMAGE:?Set GRAFANA_IMAGE in cloud/.env (pin by tag or digest; no latest tag)}
+    image: ${GRAFANA_IMAGE:?Set GRAFANA_IMAGE in .env (symlink to /etc/ovr/cloud.env; pin by tag or digest; no latest tag)}
     depends_on:
       - victoria-metrics
     environment:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER:-admin}
-      - GF_SECURITY_ADMIN_PASSWORD__FILE=/etc/overdrive/secrets/grafana_admin_password
+      - GF_SECURITY_ADMIN_PASSWORD__FILE=/etc/ovr/secrets/grafana_admin_password
       - GF_SERVER_DOMAIN=localhost
       - GF_SERVER_ROOT_URL=http://localhost:13001/
       - GF_USERS_ALLOW_SIGN_UP=false
@@ -41,7 +42,7 @@ services:
     restart: unless-stopped
 
   api:
-    image: ghcr.io/${GHCR_OWNER:?Set GHCR_OWNER in cloud/.env}/cloud-api:${CLOUD_TAG:-main}
+    image: ghcr.io/${GHCR_OWNER:?Set GHCR_OWNER in .env}/cloud-api:${CLOUD_TAG:-main}
     depends_on:
       - victoria-metrics
     environment:
@@ -79,11 +80,11 @@ services:
     volumes:
       - fleet_data:/data
       - fleet_reports:/data/reports
-      - /etc/overdrive/secrets:/etc/overdrive/secrets:ro
+      - /etc/ovr/secrets:/etc/ovr/secrets:ro
     restart: unless-stopped
 
   map:
-    image: ghcr.io/${GHCR_OWNER:?Set GHCR_OWNER in cloud/.env}/cloud-map:${CLOUD_TAG:-main}
+    image: ghcr.io/${GHCR_OWNER:?Set GHCR_OWNER in .env}/cloud-map:${CLOUD_TAG:-main}
     depends_on:
       - api
     restart: unless-stopped
@@ -101,7 +102,7 @@ services:
     volumes:
       - ./Caddyfile.sandbox:/etc/caddy/Caddyfile:ro
       - ./caddy-entrypoint.sh:/entrypoint.sh:ro
-      - /etc/overdrive/secrets:/etc/overdrive/secrets:ro
+      - /etc/ovr/secrets:/etc/ovr/secrets:ro
       - caddy_data:/data
       - caddy_config:/config
     environment:
