--- a/edge/edge.env.example
+++ b/edge/edge.env.example
@@ -1,13 +1,50 @@
-# Environment variables for compose.release.yml
+# Canonical edge env (copy to /etc/ovr/edge.env and link .env in the stack dir)
+
+# Node identity / deploy mode
+DEPLOYMENT_ID=OverdriveFleet
+NODE_ID=n100-01
+DEPLOY_MODE=dev
+STACK_NAME=n100
+BASE_DOMAIN=overdrive.rocks
+# SYSTEM_ID=legacy-rig-01  # optional legacy override
+
+# Local VictoriaMetrics endpoints (used by events)
+VM_WRITE_URL=http://victoria-metrics:8428/write
+VM_QUERY_URL=http://victoria-metrics:8428
+VM_WRITE_URL_SECONDARY=
+VM_WRITE_USERNAME=ovr
+VM_WRITE_PASSWORD_FILE=/etc/ovr/secrets/vm_write_password
+
+# Remote write (cloud backend)
+VM_REMOTE_WRITE_URL=https://metrics.example.com/api/v1/write
+VM_REMOTE_WRITE_USERNAME=ovr
+VM_REMOTE_WRITE_PASSWORD_FILE=/etc/ovr/secrets/remote_write_password
+
+# Event service auth (optional)
+REPORT_UPLOAD_URL=https://map.example.com/api/reports/upload
+REPORT_UPLOAD_TOKEN=
+
+# Map tile guardrails (optional)
+MAPBOX_TOKEN=
+MAPBOX_TOKEN_FILE=/etc/ovr/secrets/mapbox_token
+ESRI_TOKEN=
+MAPBOX_FREE_TILES_PER_MONTH=750000
+ESRI_FREE_TILES_PER_MONTH=2000000
+GUARDRAIL_LIMIT_PCT=0.95
+CLOUD_API_URL=https://map.example.com
+
+# GX SSH access (optional)
+GX_HOST=
+GX_SSH_PORT=22
+GX_USER=root
+GX_PASSWORD_FILE=/etc/ovr/secrets/gx_password
+GX_PASSWORD=
 
 # GitHub Container Registry owner/namespace.
 #
 # Why this exists:
 # - Lets you point a node at a *test* image namespace (fork / new repo) without editing compose files.
 # - Makes it trivial to migrate from personal -> GitHub org later.
-#
-# If you want maximum simplicity and never plan to change namespaces, you can hardcode it in
-# `edge/compose.release.yml` and delete this variable.
 GHCR_OWNER=YOUR_GITHUB_USERNAME
 
 # Edge SemVer (corresponds to git tag edge/vX.Y.Z and GHCR image tags)
