--- a/edge/networking/ovru-netkit/vars.env
+++ b/edge/networking/ovru-netkit/vars.env
@@ -1,20 +1,34 @@
 # === EDIT THESE PER HOST ===
-LAN_IF=enp3s0                  # GX / single-lease DHCP port
-WAN_ETH_IF=enp2s0              # LTE-router ethernet port
+# Standard deployment (service router provides GX DHCP):
+#   GX_ENABLE=0
+#   WAN_ENABLE=1            # uplink to service router (DHCP client)
+#   MODBUS_ENABLE=1         # static /24 for Modbus port
+
+# Legacy GX-direct LAN (node provides DHCP/NAT):
+#   GX_ENABLE=1
+#   GX_ENABLE_DNSMASQ=1
+#   GX_ENABLE_NAT=1
+#   GX_DHCP_RANGE_START=192.168.100.50
+#   GX_DHCP_RANGE_END=192.168.100.200
+
+LAN_IF=enp3s0                  # legacy GX/LAN port (used only when GX_ENABLE=1)
+WAN_ETH_IF=enp2s0              # uplink to service router
 WIFI_CON=wan-wifi              # NM Wi-Fi profile name
-LAN_IP_CIDR=192.168.100.1/30
+LAN_IP_CIDR=192.168.100.1/24
 LAN_CLIENT_IP=192.168.100.2
 LAN_DNS=1.1.1.1,8.8.8.8
-LAN_DHCP_LEASE=5m
+LAN_DHCP_LEASE=12h
 LAN_DHCP_NETMASK=auto
+GX_DHCP_RANGE_START=192.168.100.50
+GX_DHCP_RANGE_END=192.168.100.200
 
 # Optional toggles (1=on, 0=off)
-GX_ENABLE=1
+GX_ENABLE=0
 GX_ENABLE_DNSMASQ=1
 GX_ENABLE_NAT=1
 GX_ENABLE_FORWARDING=1
 WAN_ENABLE=1
-MODBUS_ENABLE=0
+MODBUS_ENABLE=1
 DISABLE_NETWORKD=0
 
 # WAN settings (optional)
