--- a/edge/compose.release.yml
+++ b/edge/compose.release.yml
@@ -6,15 +6,17 @@
 #
 # Usage on a node:
 #   cd /opt/edge/edge
-#   # First-time: copy and edit edge.env with pinned third-party images.
-#   cp edge.env.example edge.env
+#   # First-time: create /etc/ovr/edge.env (or copy from example) and link .env
+#   sudo mkdir -p /etc/ovr
+#   sudo cp edge.env.example /etc/ovr/edge.env
+#   sudo ln -sf /etc/ovr/edge.env .env
 #   # Then:
-#   docker compose --env-file edge.env -f compose.release.yml pull
-#   docker compose --env-file edge.env -f compose.release.yml up -d
+#   docker compose -f compose.release.yml pull
+#   docker compose -f compose.release.yml up -d
 
 services:
   victoria-metrics:
-    image: ${VM_IMAGE:?Set VM_IMAGE in edge.env (pin by tag or digest; no latest tag)}
+    image: ${VM_IMAGE:?Set VM_IMAGE in .env (symlink to /etc/ovr/edge.env; pin by tag or digest; no latest tag)}
     container_name: victoria-metrics
     command:
       - "-storageDataPath=/storage"
@@ -27,7 +29,7 @@ services:
     restart: unless-stopped
 
   node-exporter:
-    image: ${NODE_EXPORTER_IMAGE:?Set NODE_EXPORTER_IMAGE in edge.env (pin by tag or digest; no latest tag)}
+    image: ${NODE_EXPORTER_IMAGE:?Set NODE_EXPORTER_IMAGE in .env (symlink to /etc/ovr/edge.env; pin by tag or digest; no latest tag)}
     container_name: node-exporter
     command:
       - '--path.rootfs=/host'
@@ -38,12 +40,12 @@ services:
       - '/:/host:ro,rslave'
 
   vmagent:
-    image: ${VMAGENT_IMAGE:?Set VMAGENT_IMAGE in edge.env (pin by tag or digest; no latest tag)}
+    image: ${VMAGENT_IMAGE:?Set VMAGENT_IMAGE in .env (symlink to /etc/ovr/edge.env; pin by tag or digest; no latest tag)}
     container_name: vmagent
     depends_on:
       - victoria-metrics
     env_file:
-      - /etc/ovr/site.env
+      - .env
     entrypoint:
       - /bin/sh
       - /entrypoint.sh
@@ -63,12 +65,12 @@ services:
     restart: unless-stopped
 
   grafana:
-    image: ${GRAFANA_IMAGE:?Set GRAFANA_IMAGE in edge.env (pin by tag or digest; no latest tag)}
+    image: ${GRAFANA_IMAGE:?Set GRAFANA_IMAGE in .env (symlink to /etc/ovr/edge.env; pin by tag or digest; no latest tag)}
     container_name: grafana
     depends_on:
       - victoria-metrics
     env_file:
-      - /etc/ovr/site.env
+      - .env
     entrypoint:
       - /bin/sh
       - /entrypoint.sh
@@ -81,14 +83,14 @@ services:
     restart: unless-stopped
 
   telegraf:
-    image: ${TELEGRAF_IMAGE:?Set TELEGRAF_IMAGE in edge.env (pin by tag or digest; no latest tag)}
+    image: ${TELEGRAF_IMAGE:?Set TELEGRAF_IMAGE in .env (symlink to /etc/ovr/edge.env; pin by tag or digest; no latest tag)}
     container_name: telegraf
     depends_on:
       - victoria-metrics
     restart: unless-stopped
     network_mode: host
     env_file:
-      - /etc/ovr/site.env
+      - .env
     volumes:
       - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
       - ./telegraf/telegraf.d:/etc/telegraf/telegraf.d:ro
@@ -104,7 +106,7 @@ services:
       - poll
 
   events:
-    image: ghcr.io/${GHCR_OWNER:?Set GHCR_OWNER in edge.env}/edge-events:${EDGE_VERSION:-dev}
+    image: ghcr.io/${GHCR_OWNER:?Set GHCR_OWNER in .env}/edge-events:${EDGE_VERSION:-dev}
     container_name: events
     depends_on:
       - victoria-metrics
@@ -114,7 +116,7 @@ services:
       - event_data:/data
       - /etc/ovr/secrets:/etc/ovr/secrets:ro
     env_file:
-      - /etc/ovr/site.env
+      - .env
     environment:
       - DB_PATH=/data/events.db
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
@@ -123,7 +125,7 @@ services:
     restart: unless-stopped
 
   frontend:
-    image: ghcr.io/${GHCR_OWNER:?Set GHCR_OWNER in edge.env}/edge-frontend:${EDGE_VERSION:-dev}
+    image: ghcr.io/${GHCR_OWNER:?Set GHCR_OWNER in .env}/edge-frontend:${EDGE_VERSION:-dev}
     container_name: frontend
     depends_on:
       - events
