fix: run nm bootstrap via bash

--- a/provisioning/edge/firstboot.env.example
+++ b/provisioning/edge/firstboot.env.example
@@ -10,6 +10,9 @@ ALLOWED_TCP_PORTS=22,3000,8428,8429,9100,8080,8088
 
 LOG_FILE=/var/log/ovr-firstboot.log
 
+# NetworkManager bootstrap (set to 0 to skip)
+RUN_NM_BOOTSTRAP=1
+
 # Remote connectivity probes
 DNS_PROBE_HOST=deb.debian.org
 IP_PROBE_HOST=1.1.1.1
