--- a/provisioning/edge/ovr-firstboot.service
+++ b/provisioning/edge/ovr-firstboot.service
@@ -10,7 +10,7 @@ TimeoutStartSec=0
 Restart=on-failure
 RestartSec=30
 ExecStartPre=/bin/sh -c 'mkdir -p /var/log && touch /var/log/ovr-firstboot.log && chmod 0640 /var/log/ovr-firstboot.log'
-ExecStart=/usr/local/sbin/ovr-firstboot
+ExecStart=/usr/bin/bash /usr/local/sbin/ovr-firstboot
 StandardInput=null
 StandardOutput=journal+console
 StandardError=journal+console
