--- a/provisioning/edge/preseed.cfg
+++ b/provisioning/edge/preseed.cfg
@@ -118,9 +118,6 @@ d-i preseed/late_command string \
   if [ -d /cdrom/ovr ]; then \
     mkdir -p /target/etc/ovr; \
     cp -a /cdrom/ovr/. /target/etc/ovr/; \
-  elif [ -d /cdrom/overdrive ]; then \
-    mkdir -p /target/etc/ovr; \
-    cp -a /cdrom/overdrive/. /target/etc/ovr/; \
   fi; \
   if [ -d /target/etc/ovr/secrets ]; then \
     chmod 700 /target/etc/ovr/secrets; \
@@ -130,13 +127,12 @@ d-i preseed/late_command string \
     chmod 600 /target/etc/ovr/edge.env; \
   fi; \
   if [ -d /cdrom/OVR_Telemetry_Stack ]; then \
-    mkdir -p /target/opt/stack; \
-    cp -a /cdrom/OVR_Telemetry_Stack/. /target/opt/stack/; \
+    mkdir -p /target/opt/ovr; \
+    cp -a /cdrom/OVR_Telemetry_Stack/. /target/opt/ovr/; \
   elif [ -f /cdrom/OVR_Telemetry_Stack.tar.gz ]; then \
-    mkdir -p /target/opt/stack; \
-    tar -xzf /cdrom/OVR_Telemetry_Stack.tar.gz -C /target/opt/stack --strip-components=1; \
-  fi; \
-  in-target sh -c "if [ ! -e /opt/edge ]; then ln -s /opt/stack/edge /opt/edge; fi"
+    mkdir -p /target/opt/ovr; \
+    tar -xzf /cdrom/OVR_Telemetry_Stack.tar.gz -C /target/opt/ovr --strip-components=1; \
+  fi;
 
 ### Finish
 d-i finish-install/reboot_in_progress note
