chore: refresh edge env examples (refs #1)

--- a/edge/edge.env.example
+++ b/edge/edge.env.example
@@ -3,6 +3,7 @@
 # Node identity / deploy mode
 DEPLOYMENT_ID=OverdriveFleet
 NODE_ID=n100-01
+SYSTEM_ID=n100-01
 DEPLOY_MODE=dev
 STACK_NAME=n100
 BASE_DOMAIN=overdrive.rocks
@@ -32,13 +33,6 @@ MAPBOX_FREE_TILES_PER_MONTH=750000
 ESRI_FREE_TILES_PER_MONTH=2000000
 GUARDRAIL_LIMIT_PCT=0.95
 CLOUD_API_URL=https://map.example.com
-
-# GX SSH access (optional)
-GX_HOST=
-GX_SSH_PORT=22
-GX_USER=root
-GX_PASSWORD_FILE=/etc/ovr/secrets/gx_password
-GX_PASSWORD=
 
 # GitHub Container Registry owner/namespace.
 #
