--- a/edge/examples/edge.env.example
+++ b/edge/examples/edge.env.example
@@ -4,6 +4,7 @@
 # Node identity
 DEPLOYMENT_ID=OverdriveFleet
 NODE_ID=n100-01
+SYSTEM_ID=n100-01
 DEPLOY_MODE=dev
 STACK_NAME=n100
 BASE_DOMAIN=overdrive.rocks
@@ -36,9 +37,3 @@ ESRI_FREE_TILES_PER_MONTH=2000000
 GUARDRAIL_LIMIT_PCT=0.95
 CLOUD_API_URL=https://map.example.com
 
-# GX SSH access (optional)
-GX_HOST=
-GX_SSH_PORT=22
-GX_USER=root
-GX_PASSWORD_FILE=/etc/ovr/secrets/gx_password
-GX_PASSWORD=
