--- a/edge/compose.release.yml
+++ b/edge/compose.release.yml
@@ -33,11 +33,14 @@ services:
     container_name: node-exporter
     command:
       - '--path.rootfs=/host'
-    network_mode: host
     pid: host
     restart: unless-stopped
     volumes:
       - '/:/host:ro,rslave'
+    networks:
+      default:
+        aliases:
+          - node_exporter
 
   vmagent:
     image: ${VMAGENT_IMAGE:?Set VMAGENT_IMAGE in .env (symlink to /etc/ovr/edge.env; pin by tag or digest; no latest tag)}
@@ -51,8 +54,6 @@ services:
       - /entrypoint.sh
     ports:
       - "8429:8429"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     volumes:
       - ./vmagent/entrypoint.sh:/entrypoint.sh:ro
       - /etc/ovr/vmagent.scrape.yml:/etc/vmagent/scrape.yml:ro
@@ -94,8 +95,6 @@ services:
     volumes:
       - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
       - ./telegraf/telegraf.d:/etc/telegraf/telegraf.d:ro
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     command:
       - telegraf
       - --config
