--- a/edge/compose.dev.yml
+++ b/edge/compose.dev.yml
@@ -75,7 +75,7 @@ services:
       - .env
     volumes:
       - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
-      - ./telegraf/telegraf.d:/etc/telegraf/telegraf.d:ro
+      - /etc/ovr/telegraf.d:/etc/telegraf/telegraf.d:ro
     command:
       - telegraf
       - --config
