--- a/edge/compose.release.yml
+++ b/edge/compose.release.yml
@@ -94,7 +94,7 @@ services:
       - .env
     volumes:
       - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
-      - ./telegraf/telegraf.d:/etc/telegraf/telegraf.d:ro
+      - /etc/ovr/telegraf.d:/etc/telegraf/telegraf.d:ro
     command:
       - telegraf
       - --config
