edge: set explicit DNS for vmagent to prevent docker DNS timeouts

--- a/edge/compose.release.yml
+++ b/edge/compose.release.yml
@@ -54,6 +54,9 @@ services:
       - /entrypoint.sh
     ports:
       - "8429:8429"
+    dns:
+      - 1.1.1.1
+      - 8.8.8.8
     volumes:
       - ./vmagent/entrypoint.sh:/entrypoint.sh:ro
       - /etc/ovr/vmagent.scrape.yml:/etc/vmagent/scrape.yml:ro
@@ -92,6 +95,9 @@ services:
     network_mode: host
     env_file:
       - .env
+    dns:
+      - 1.1.1.1
+      - 8.8.8.8
     volumes:
       - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
       - /etc/ovr/telegraf.d:/etc/telegraf/telegraf.d:ro
